first page done

--- a/index.html
+++ b/index.html
@@ -1,12 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Main Page</title>
 </head>
+
 <body>
-    
+    <div id="layout">
+        <header>
+            <h1>MSUKorean</h1>
+
+        </header>
+        <nav id="navigation">
+            <ul>
+                <li><a href="index.html">Main Page</a></li>
+                <li><a href="index2.html">Community</a></li>
+            </ul>
+            <ul>
+                <li>
+                    <img src="msulogo.png" alt= "msulogoimage" id="MSUlogo"/>
+                </li>
+            </ul>
+        </nav>
+        <section>
+            <h2>Welcome to MSUKorean</h2>
+            <ul>
+                <li>
+                    <article id = "art">
+                        <h3>
+                            What do we do?
+                        </h3>
+                        <p>MSUKorean provides basic information such as how to apply on MSU, the
+                            requirement classes, Korean clubs’ information, etc. My website is not only giving
+                            information, but it also be a community of the students. A portion of website is showing
+                            anonymous name to write the issues they want to talk about, and upload events. Even though
+                            it is a anonymous name, but it requires signing up and put some information about users
+                            themselves.</p>
+                    </article>
+                </li>
+                <li><img src="KoreanFlag.png" alt="flagImage" id="Koreaflag"/></li>
+            </ul>
+        </section>
+    </div>
 </body>
+
 </html>
