--- a/index2.html
+++ b/index2.html
@@ -1,16 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Community Page</title>
 </head>
+
 <body>
-    <h1>
-        MSUKorean
-    </h1>
-    
-    <buttom href="index2.html">Main</button>
+    <div id="layout">
+        <header>
+            <h1>Community</h1>
+        </header>
+        <nav id="navigation">
+            <ul>
+                <li><a href="index.html">Main Page</a></li>
+                <li><a href="index2.html">Community</a></li>
+            </ul>
+            <ul>
+                <li><img src="msulogo.png" id="MSUlogo"></img></li>
+            </ul>
+        </nav>
+        <section>
+            <ul>
+                <article id="art">
+
+                </article>
+            </ul>
+        </section>
+    </div>
 </body>
+
 </html>
