--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </ul>
             <ul>
                 <li>
-                    <img src="msulogo.png" alt= "msulogoimage" id="MSUlogo"/>
+                    <img src="msulogo.png" alt="msulogoimage" id="MSUlogo" />
                 </li>
             </ul>
         </nav>
@@ -29,19 +29,23 @@
             <h2>Welcome to MSUKorean</h2>
             <ul>
                 <li>
-                    <article id = "art">
+                    <article id="art">
                         <h3>
                             What do we do?
                         </h3>
-                        <p>MSUKorean provides basic information such as how to apply on MSU, the
-                            requirement classes, Korean clubs’ information, etc. My website is not only giving
-                            information, but it also be a community of the students. A portion of website is showing
-                            anonymous name to write the issues they want to talk about, and upload events. Even though
+                        <p>MSUKorean is a website that provides basic information such as how to apply to MSU, the
+                            requirement classes, and Korean clubs’
+                            information. MSUKorean will not only be a place
+                            providing information, but it will rather serve as a community where the students can feel
+                            safe. A
+                            portion of website is showing
+                            anonymous name to write the issues they want to discuss about, and upload events. Even
+                            though
                             it is a anonymous name, but it requires signing up and put some information about users
                             themselves.</p>
                     </article>
                 </li>
-                <li><img src="KoreanFlag.png" alt="flagImage" id="Koreaflag"/></li>
+                <li><img src="KoreanFlag.jpg" alt="flagImage" id="Koreaflag" /></li>
             </ul>
         </section>
     </div>
