--- a/index2.html
+++ b/index2.html
@@ -23,13 +23,21 @@
             </ul>
         </nav>
         <section>
-            <ul>
-                <article id="art">
-
-                </article>
-            </ul>
+                <div id="wrapper">
+                    <div id="menu">
+                        <p class="CommunityChat">Welcome, Guest <b></b></p>
+                        <p class="logout"><a id="exit" href="#"></a></p>
+                    </div>
+                 
+                <div id="chatbox"></div> 
+                    <form name="message" action="">               
+                    <input type="text" class="textbox">
+                    <input type="submit" class="submit" value="Send">
+                    </from>
+                </div> 
         </section>
     </div>
+    <script type="text/javascript" src="java.js"></script>
 </body>
 
 </html>
