just need to finish chat

--- a/index2.html
+++ b/index2.html
@@ -23,18 +23,16 @@
             </ul>
         </nav>
         <section>
-                <div id="wrapper">
-                    <div id="menu">
-                        <p class="CommunityChat">Welcome, Guest <b></b></p>
-                        <p class="logout"><a id="exit" href="#"></a></p>
-                    </div>
-                 
-                <div id="chatbox"></div> 
-                    <form name="message" action="">               
-                    <input type="text" class="textbox">
-                    <input type="submit" class="submit" value="Send">
-                    </from>
-                </div> 
+            <div id="wrapper">
+                <div id="menu">
+                    <p class="CommunityChat">Welcome, Guest <b></b></p>
+                </div>
+
+                <div id="chatbox"></div>
+
+                    <input type="text" id="textbox">
+                    <button id="submitbox" onclick="getMessage()">Send</button>
+            </div>
         </section>
     </div>
     <script type="text/javascript" src="java.js"></script>
